<?xml version="1.0"?>
<package format="3">
  <name>datetime_publisher</name>
  <version>0.1.0</version>
  <description>ROS 2 package for publishing current datetime.</description>

  <maintainer email="marumaru09030903@gmail.com">Daichi Hirose</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
  </export>
</package>
